welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:4: error: not found: value table
	for(i <- 0 to table.length - 1){
                      ^