welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int = {

	var count = 0;
	for(i <- 0 to table.length - 1){

		if(table(i)==9){
			count = count + 1;
		}
		
	}
	return count ;
}
